# DataView

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
dataview/: CMakeLists.txt  axesaux.cpp  axesaux.h  dataaux.cpp  dataaux.h  dataview.cpp  dataview.h  draglistview.cpp  draglistview.h  dropchartview.cpp  dropchartview.h  fileaux.cpp  fileaux.h  graphframe.cpp  graphframe.h  threecolstacked.cpp  threecolstacked.h  twocol.cpp  twocol.h  twocol_log.cpp  twocol_log.h  twocol_m.cpp  twocol_m.h  twocol_m_log.cpp  twocol_m_log.h
dataview/pwutils/: CMakeLists.txt
dataview/pwutils/src/: pwdir.cpp
demos/: CMakeLists.txt
demos/Mathfun/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
demos/Optics/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
demos/Optics/data/: RT_0.json  T_1.json  T_10.json  T_11.json  T_12.json  T_13.json  T_14.json  T_15.json  T_16.json  T_17.json  T_18.json  T_19.json  T_2.json  T_20.json  T_21.json  T_22.json  T_23.json  T_24.json  T_25.json  T_26.json  T_27.json  T_28.json  T_29.json  T_3.json  T_30.json  T_31.json  T_32.json  T_33.json  T_34.json  T_35.json  T_36.json  T_37.json  T_38.json  T_39.json  T_4.json  T_40.json  T_41.json  T_42.json  T_43.json  T_44.json  (+15 more)
include/: DataView  dataview.h  dataview_global.h  dropwidget.h
include/DataView/: dropchartview.h  graphframe.h  threecolstacked.h  twocol_m.h
include/core/: dataaux.h  dataaux3D.h  fileaux.h
include/graphframe/: dropchartview.h  graphframe.h  surfacegraph.h  surfacewidget.h  threecolstacked.h  twocol.h  twocol_m.h
include/graphgui/: dropchartview.h  graphframe.h  twocol.h  twocol_m.h
include/graphgui/graphtype/: threecolstacked.h  twocol.h  twocol_m.h
include/listgui/: draglistview.h
scripts/: configure.sh
src/: CMakeLists.txt  dataview.cpp  draglistview.cpp  dropwidget.cpp  twocol.cpp
src/core/: dataaux.cpp  dataaux3D.cpp  fileaux.cpp
src/graphframe/: axesaux.cpp  dropchartview.cpp  graphframe.cpp  surfacegraph.cpp  surfacewidget.cpp  threecolstacked.cpp  twocol.cpp  twocol_m.cpp
src/graphframe/graphtype/: threecolstacked.cpp  twocol.cpp  twocol_m.cpp
src/graphgui/: axesaux.cpp  dropchartview.cpp  graphframe.cpp
src/graphgui/graphtype/: threecolstacked.cpp  twocol.cpp  twocol_m.cpp
src/listgui/: draglistview.cpp
